--- a/_config.yml
+++ b/_config.yml
@@ -1,25 +1,20 @@
 # Base configs
-baseurl: "https://photography.rampatra.com"
 image_fulls_loc: "/images/fulls"
 image_thumbs_loc: "/images/thumbs"
 google_analytics: "UA-46465113-2"
 
 # UI configs
-title: "Photography by Ram Patra"
-subtitle: "See the world through my eyes!"
-author: "Ram Patra"
+title: "Photography by Tiffany & Sammy"
+subtitle: "The University of Georgia 2020"
+author: "Tiffany & Sammy"
 header:
  title: "Photography"
- subtitle: "by Ram Patra"
+ subtitle: "by Tiffany & Sammy"
 footer:
- name: "Hey there, my name is Ram"
- bio: "I am a developer and a tech aficionado from India. Love making teeny tiny apps solving tiny problems in life and now learning photography."
- github: "Want a website like this for yourself for free? Just <a href=\"https://github.com/ramswaroop/photography\">fork me on github</a> ;)"
+ name: "Tiffany & Sammy"
+ bio: "The Univeristy of Georgia, Fall 2020"
 web_design: "AJ"
 social_urls:
-  facebook: "https://www.facebook.com/ramswaroop"
-  twitter: "https://www.twitter.com/ram__patra"
-  instagram: "https://www.instagram.com/ram_patra"
-  dribbble: "https://dribbble.com/rampatra"
-  linkedin: "https://in.linkedin.com/in/ram-patra"
-  github: "https://www.github.com/rampatra"
+  linkedin: "https://www.linkedin.com/in/sammy-vo-504205182/"
+  linkedin: "https://www.linkedin.com/in/7iffvny/"
+  github: "https://github.com/TiffyxSammy"
